--- a/core/bootstrap/pom.xml
+++ b/core/bootstrap/pom.xml
@@ -8,21 +8,43 @@
         <groupId>ws.mocanu.gearman</groupId>
         <artifactId>gearman</artifactId>
         <version>1.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>gearman-core</artifactId>
+    <groupId>ws.mocanu.gearman.core</groupId>
+    <artifactId>gearman-bootstrap</artifactId>
     <version>1.0</version>
-    <name>Gearman Core</name>
+    <name>Gearman Core - Bootstrap</name>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>ws.mocanu.gearman.core</groupId>
+            <artifactId>gearman-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!-- /////////////////////////////////// -->
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
-        <finalName>gearman</finalName>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
+        <finalName>gearman-bootstrap</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -43,7 +65,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>iquest.jbuster.MainClass</mainClass>
+                            <mainClass>gearman.bootstrap.MainClass</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
