Added initial UI for the base module and the core app

--- a/core/app/pom.xml
+++ b/core/app/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>ws.mocanu.gearman.core</groupId>
+    <groupId>ws.gearman.core</groupId>
     <artifactId>gearman-app</artifactId>
     <version>1.0</version>
     <name>Gearman App</name>
