--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>ws.gearman</groupId>
     <artifactId>gearman-parent</artifactId>
     <version>1.0</version>
-    <name>Gearman</name>
+    <name>Gearman Parent</name>
     <packaging>pom</packaging>
 
     <properties>
@@ -66,7 +66,9 @@
 
     <modules>
         <module>core/app</module>
+        <module>core/module-api</module>
         <module>modules/base</module>
+        <module>modules/timestamp</module>
     </modules>
 
 </project>
